Added dotenv to hide personal info

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/aLaclair/bamazon-sql#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "inquirer": "^7.2.0",
     "mysql2": "^2.1.0"
   }
